@@ -905,9 +905,14 @@ int igraph_layout_lgl(const igraph_t *graph, igraph_matrix_t *res,
 		      igraph_real_t area, igraph_real_t coolexp,
 		      igraph_real_t repulserad, igraph_real_t cellsize, igraph_integer_t root);
 int igraph_layout_reingold_tilford(const igraph_t *graph, igraph_matrix_t *res,
-              long int root);
+				   igraph_neimode_t mode,
+				   const igraph_vector_t *roots,
+				   const igraph_vector_t *rootlevel);
 int igraph_layout_reingold_tilford_circular(const igraph_t *graph,
-					    igraph_matrix_t *res, long int root);
+					    igraph_matrix_t *res, 
+					    igraph_neimode_t mode,
+					    const igraph_vector_t *roots,
+					    const igraph_vector_t *rootlevel);
 
 int igraph_layout_random_3d(const igraph_t *graph, igraph_matrix_t *res);
 int igraph_layout_sphere(const igraph_t *graph, igraph_matrix_t *res);
